[package]
name = "feet"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.4", features = ["derive"]}
gluesql = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
csv = "1.1.6"
toml = "0.5.9"
shellexpand = "2.1.2"
xdg = "2.4.1"

[dependencies.tokio]
version = "1.21.2"
features = [ "rt-multi-thread", "fs", "macros" ]
